# trails

./: .gitignore  Makefile  README.md  pyproject.toml  raw_queries.sql
src/trails/: ingest.py
src/trails/sources/: oregon_hikers.py
test_trails/sources/: test_oregon_hikers.py
